<resources>
    <!-- Названия для компонентов -->
    <string name="app_name">Морской бой</string>
    <string name="play">Играть</string>
    <string name="profile">Профиль</string>
    <string name="stats">Статистика</string>
    <string name="help">Справка</string>
    <string name="back">Назад</string>
    <string name="about_system">О системе</string>
    <string name="choose_browser">Открыть в браузере</string>
    <string name="refresh">Обновить</string>
    <string name="edit_name">Редактировать имя</string>
    <string name="change_avatar">Изменить аватар</string>
    <string name="save">Сохранить</string>
    <string name="next">Далее</string>
    <string name="load">Загрузить</string>
    <string name="clear_field">Очистить поле</string>
    <string name="to_battle">В бой!</string>
    <string name="game_field">Игровое поле</string>
    <string name="ship_templates">Шаблоны кораблей</string>
    <string name="main_menu">Главное меню</string>
    <string name="play_again">Сыграть снова</string>
    <string name="music">Музыка</string>
    <string name="initial_countdown_value">3</string>
    <string name="give_up">С\nД\nА\nТ\nЬ\nС\nЯ</string>
    <string name="template_ships">Шаблоны кораблей</string>



    <!-- Названия для таблиц -->
    <string name="db_username">Имя пользователя</string>
    <string name="db_result">Результат</string>
    <string name="db_level">Уровень сложности</string>
    <string name="db_date">Дата</string>

    <!-- Названия для текстовых ресурсов -->
    <string name="txt_example">Пример текста</string>
    <string name="txt_help_title">Сведения о разработчиках</string>
    <string name="txt_help_text">
        Самарский университет\n
        Кафедра программных систем\n
        Курсовой проект по дисциплине \"Программная инженерия\"\n
        Тема проекта \"Игра \"Морской бой\"\n\n
        Разработчики - обучающиеся группы 6302-020302D\n
        Васильев А.Л.\n
        Гончарова Ю.А.\n\n
        Самара 2025
    </string>
    <string name="txt_error_loading">Ошибка загрузки, попробуйте снова!</string>
    <string name="txt_retry">Повторить попытку!</string>
    <string name="txt_avatar">Аватар</string>
    <string name="txt_username">Имя пользователя</string>
    <string name="txt_enter_name">Введите имя пользователя:</string>
    <string name="txt_select_avatar">Выберите аватар:</string>
    <string name="txt_game_setup">Настройка игры</string>
    <string name="txt_difficulty">Уровень сложности</string>
    <string name="txt_placement">Способ расстановки</string>
    <string name="txt_load_saved_setup">Загрузка сохраненной расстановки</string>
    <string name="txt_select_setup">Выберите расстановку</string>
    <string name="txt_enter_placement_name">Введите название расстановки</string>
    <string name="txt_placement_name">Название расстановки</string>
    <string name="txt_manual_setup">Ручная расстановка</string>
    <string name="txt_auto_setup">Автоматическая расстановка</string>
    <string name="txt_select_placement_strategy">Выберите стратегию расстановки</string>
    <string name="txt_update_placement">Обновить расстановку</string>
    <string name="label_player">Игрок</string>
    <string name="avatar_player">Аватар игрока</string>
    <string name="label_opponent">Летучий Голландец</string>
    <string name="avatar_opponent">Аватар компьютера</string>
    <string name="label_role_capitan">Капитан</string>
    <string name="txt_turn_player">Ваш ход!</string>
    <string name="txt_turn_computer">Ход Летучего Голландца!</string>
    <string name="txt_remains">О\nс\nт\nа\nл\nо\nс\nь\n\nк\nо\nр\nа\nб\nл\nе\nй</string>
    <string name="txt_remains_destroy">Осталось уничтожить</string>
    <string name="txt_ship_battleship">Линкор</string>
    <string name="txt_count_battleship">1</string>
    <string name="txt_ship_cruiser">Крейсер</string>
    <string name="txt_count_cruiser">2</string>
    <string name="txt_ship_destroyer">Эсминец</string>
    <string name="txt_count_destroyer">3</string>
    <string name="txt_ship_speedboat">Катер</string>
    <string name="txt_count_speedboat">4</string>
    <string name="txt_give_up">Сдаться</string>

    <!-- Названия для подсказок пользователю -->
    <string name="hint_username">Имя может содержать только буквы и пробелы между словами!</string>
    <string name="hint_select_setup">Пожалуйста, выберите расстановку…</string>
    <string name="hint_placement_name">Название расстановки может содержать только буквы, цифры и пробелы между словами!</string>
    <string name="hint_exit_impossible">Выход из данного процесса невозможен!</string>
    <string name="hint_open_help">Открытие информации о системе</string>
    <string name="hint_changed_name">Имя пользователя изменено</string>
    <string name="hint_changed_avatar">Аватар изменен</string>
    <string name="hint_error_placement">Не удалось сгенерировать расстановку</string>
    <string name="hint_save_placement">Расстановка сохранена</string>
    <string name="hint_clear_already">Игровое поле уже очищено!</string>
    <string name="hint_battle_invalid">Сначала расставьте все корабли!</string>

    <!-- Названия для уведомлений -->
    <string name="notification_channel_name">Music Service</string>
    <string name="notification_channel_description">Background music playback</string>
    <string name="notification_title">Игра \"Морской бой\"</string>
    <string name="notification_text">Включена фоновая музыка</string>


    <!-- Названия для данных -->
    <string name="difficulty_easy">Легкий</string>
    <string name="difficulty_medium">Средний</string>
    <string name="difficulty_hard">Сложный</string>
    <string name="difficulty_expert">Эксперт</string>

    <string name="result_win">Победа</string>
    <string name="result_loss">Поражение</string>

    <string name="placement_manual">Ручной</string>
    <string name="placement_auto">Автоматический</string>
    <string name="placement_load_saved">Загрузка сохраненной</string>

    <string name="strategy_placement_half_field">Половина поля</string>
    <string name="strategy_placement_coasts">Берега</string>
    <string name="strategy_placement_diagonal">Диагональное расположение</string>

    <string name="strategy_shooters_random">Случайная с добиванием</string>
    <string name="strategy_shooters_diagonal">Диагональная</string>
    <string name="strategy_shooters_density_analysis">Анализ плотности</string>

    <!-- Названия для модальных окон (диалогов) -->
    <string name="exit_title">Выход из приложения</string>
    <string name="exit_message">Вы действительно хотите выйти?</string>
    <string name="game_over_title">Конец игры</string>
    <string name="game_over_message">Вы действительно хотите сдаться?</string>
    <string name="action_yes">Да</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_ok">Ок</string>
    <string name="action_done">Готово</string>
    <string name="error_name_title">Некорректный ввод!</string>
    <string name="error_username_message">Вы неправильно ввели имя пользователя, попробуйте снова!</string>
    <string name="error_placement_name_message">Вы неправильно ввели название расстановки, попробуйте снова!</string>
    <string name="error_refresh_title">Ошибка обновления!</string>
    <string name="error_refresh_message">Чтобы обновить расстановку, необходимо выбрать стратегию!</string>
    <string name="error_save_title">Ошибка сохранения!</string>
    <string name="error_save_auto_placement_message">Чтобы сохранить расстановку, необходимо расставить корабли!</string>
    <string name="error_save_manual_placement_message">Чтобы сохранить расстановку,
        необходимо расставить корректно все корабли!</string>
</resources>