<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_btn_back"
        android:tooltipText="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="312dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/txt_auto_setup"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.battleship_game.ui.AutoPlacementFieldView
        android:id="@+id/bfv"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:tooltipText="@string/game_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="36dp"
        android:text="@string/txt_select_placement_strategy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilStrategy"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:hint="@string/txt_select_placement_strategy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHint">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/actvStrategy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btnUpdate"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="200dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/refresh"
        android:src="@drawable/ic_btn_refresh"
        android:tooltipText="@string/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilStrategy" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_btn_save"
        android:tooltipText="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bfv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/buttonToBattle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/to_battle"
        android:tooltipText="@string/to_battle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
